[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.5"
axum-test = "14.9.1"
config = "0.14.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1", features = ["v4", "v7"] }
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
thiserror = "1.0.61"
validator = "0.18.1"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
