[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-test = "14.9.1"
base64 = "0.22.1"
config = "0.14.0"
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.117"
strum = "0.26"
strum_macros = "0.26"
tera = { version = "1.19.1", default-features = false }
thiserror = "1.0.61"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1", features = ["v4", "v7"] }
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
validator = "0.18.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.0"
